# Wang2DDynamicConvexHull

./: .clang-format  CMakeLists.txt  README.md
data/: input.csv  window_10.csv  window_100.csv  window_1000.csv
include/: Calculator.hpp  DynamicSlidingConvex2DHull.hpp  io_utils.hpp  sliding_convex_2D_hull.hpp
include/geometry/: Angles.hpp  Point.hpp  geometry_utils.hpp
include/wang_dynamic_hull/: Node.hpp  NodeS1.hpp  NodeS2.hpp  WangConvexHull.hpp  node_left_set.hpp  node_right_set.hpp  wang_convex_hull_debug.hpp  wang_upper_convex_hull.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
visualizations/: WangVisualisation.ipynb
